k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lnr-gossip
  namespace: lnr
  labels:
    app: lnr-gossip
spec:
  selector:
    app: lnr-gossip
  ports:
  - name: web
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
